INCLUDES = -I$(top_srcdir)/include
noinst_LIBRARIES = libconnect.a librpc.a libxinupower.a
libconnect_a_SOURCES	= breakConnection.c	connectto.c	connectUtils.c\
	getuser.c	makeConnection.c	netutils.c	obtainStatus.c\
	ttymode.c	ttyutils.c		xmalloc.c
librpc_a_SOURCES = rpc.c	ttyutils.c
libxinupower_a_SOURCES = xinu-power.c
