INCLUDES = -I$(top_srcdir)/include
bin_PROGRAMS = xinu-console xinu-status xinu-power
sbin_PROGRAMS = xinu-consoled tty-connect xinu-powerd
xinu_console_SOURCES = xinu-console.c ../include/connect.h
xinu_console_DEPENDENCIES = ../lib/libconnect.a
xinu_console_LDADD = ../lib/libconnect.a
tty_connect_SOURCES  = tty-connect.c
tty_connect_DEPENDENCIES = ../lib/libconnect.a
tty_connect_LDADD = ../lib/libconnect.a
xinu_status_SOURCES = xinu-status.c ../include/connect.h
xinu_status_DEPENDENCIES = ../lib/libconnect.a
xinu_status_LDADD = ../lib/libconnect.a
xinu_consoled_SOURCES = scanner.l log.c support.c xinu-consoled.c ../include/cserver.h ../include/timeout.h ../include/tokens.h ../include/connect.h
xinu_consoled_DEPENDENCIES = ../lib/libconnect.a ../include/cserver.h ../include/connect.h
xinu_consoled_LDADD = ../lib/libconnect.a @LEXLIB@
xinu_power_SOURCES = xinu-power.c ../include/rpc.h ../include/xinu-power.h
xinu_power_DEPENDENCIES = ../lib/librpc.a ../lib/libxinupower.a
xinu_power_LDADD = ../lib/librpc.a ../lib/libxinupower.a
xinu_powerd_SOURCES = xinu-powerd.c ../include/rpc.h ../include/xinu-power.h
xinu_powerd_DEPENDENCIES = ../lib/librpc.a ../lib/libxinupower.a
xinu_powerd_LDADD =../lib/librpc.a ../lib/libxinupower.a
